<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".UpdateEdit.EditExpense">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="Update Your Expense Details Here"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:background="@drawable/style_background_section"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/style_background_section">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_exp_id"
                    android:inputType="number"
                    android:visibility="invisible"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:hint="ID"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/edit_exp_name"
                    android:fontFamily="sans-serif"
                    android:background="@drawable/style_background_green"
                    android:paddingLeft="10dp"
                    android:inputType="text"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:hint="@string/exp_name"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/edit_exp_amount"
                    android:inputType="number"
                    android:fontFamily="sans-serif"
                    android:background="@drawable/style_background_green"
                    android:paddingLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="15dp"
                    android:hint="@string/amount"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    >
                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:fontFamily="sans-serif"
                        android:background="@drawable/style_background_green"
                        android:paddingLeft="10dp"
                        android:gravity="start"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:text="@string/transaction_type"/>
                    <Spinner
                        android:id="@+id/edit_spin_trans"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:entries="@array/spin"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:layout_marginTop="15dp"
                    >
                    <TextView
                        android:layout_width="20dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:gravity="start"
                        android:textColor="#000000"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:text="@string/Exp_type"/>
                    <Spinner
                        android:id="@+id/edit_spin_exp"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:id="@+id/exp_tvdate"
                    android:visibility="gone"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center"
                    android:textAlignment="textStart"
                    android:layout_marginLeft="15dp"
                    android:text="Date"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    android:gravity="start" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/edit_description"
                    android:layout_marginTop="15dp"
                    android:fontFamily="sans-serif"
                    android:background="@drawable/style_background_green"
                    android:paddingLeft="10dp"
                    android:layout_marginLeft="15dp"
                    android:hint="@string/Description"/>
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:text="Update Details"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="cursive"
                    android:layout_gravity="center"
                    android:background="@drawable/update"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/edit_add_details"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>