<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".Registration.Registration">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:background="@drawable/lgrg"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name_reg"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="serif-monospace"
                    android:background="@drawable/style_background_green"
                    android:layout_marginTop="100dp"
                    android:drawableStart="@drawable/name"
                    android:drawableLeft="@drawable/name"
                    android:drawableTint="@color/colorPrimary"
                    android:hint="@string/hint_name"
                    android:padding="10dp"
                    android:textAlignment="inherit"
                    tools:ignore="RtlCompat" />

                <EditText
                    android:id="@+id/email_reg"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="serif-monospace"
                    android:background="@drawable/style_background_green"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/email"
                    android:drawableLeft="@drawable/email"
                    android:drawableTint="@color/colorPrimary"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textAlignment="inherit"
                    tools:ignore="RtlCompat" />

                <EditText
                    android:id="@+id/phone_reg"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/phone"
                    android:fontFamily="serif-monospace"
                    android:background="@drawable/style_background_green"
                    android:drawableLeft="@drawable/phone"
                    android:drawableTint="@color/colorPrimary"
                    android:hint="@string/hint_phone"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:textAlignment="inherit"
                    tools:ignore="RtlCompat" />

                <EditText
                    android:id="@+id/pass_reg"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="serif-monospace"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/password"
                    android:drawableLeft="@drawable/password"
                    android:drawableTint="@color/colorPrimary"
                    android:background="@drawable/style_background_green"
                    android:hint="@string/hint_mpin"
                    android:inputType="number"
                    android:maxLength="4"
                    android:padding="10dp"
                    android:textAlignment="inherit"
                    tools:ignore="RtlCompat" />

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/style_background_section"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/cancel_reg"
                        android:layout_width="120dp"
                        android:layout_height="60dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/cancel"
                        android:text="Cancel"
                        android:textColor="@color/colorWhite" />

                    <ImageView
                        android:id="@+id/register"
                        android:layout_width="120dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/registerimg"
                        android:text="Register"
                        android:textColor="@color/colorWhite" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>




</LinearLayout>
